syntax = "proto3";

option go_package = "go_fundamental/grpc/helloworld";

package helloworld;


// The greeting service definition. Defines all of the function signatures that the server will implement.
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}